# make-notes

./: .gitignore  Modelfile  README.md  mn.toml.sample  pyproject.toml
mn/: __init__.py  cli.py  config.py  edit.py  fmt.py  log.py  record.py  redact.py  summarize.py  transcribe.py
templates/: birp.txt  cbt-soap.txt  dap.txt  informed-consent.txt  intake.txt  neuropsychoanalytic.txt  progress.txt  psychodynamic.txt  soap.txt
tests/: test_cli.py  test_config.py  test_edit.py  test_fmt.py  test_integration.py  test_log.py  test_record.py  test_redact.py  test_summarize.py  test_transcribe.py
