[project]
name = "make-notes"
version = "0.2.0"
description = "Speech-to-notes: transcribe, diarize, and summarize"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "faster-whisper>=1.0.0",
    "pyannote.audio>=3.1",
    "httpx>=0.27",
    "tomli>=1.0; python_version < '3.11'",
]

[project.optional-dependencies]
record = ["sounddevice>=0.4", "soundfile>=0.12", "numpy>=1.24"]
test = ["pytest>=7.0"]

[project.scripts]
mn = "mn.cli:main"
mn-transcribe = "mn.cli:transcribe"
mn-fmt = "mn.cli:fmt"
mn-redact = "mn.cli:redact"
mn-edit = "mn.cli:edit"
mn-summarize = "mn.cli:summarize"
mn-templates = "mn.cli:templates"
mn-batch = "mn.cli:batch"
mn-record = "mn.cli:record"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
